syntax = "proto3";

package task;

service TaskService {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc UpdateStatus (UpdateStatusRequest) returns (UpdateStatusResponse);
  rpc GetOneById (GetOneByIdRequest) returns (GetOneByIdResponse);
}

message CreateRequest {
  string name = 1;
}
message CreateResponse {
  string id = 1;
  string name = 2;
  string status = 3;
}

message UpdateStatusRequest {
  string id = 1;
  string status = 2;
}
message UpdateStatusResponse {}

message GetOneByIdRequest {
  string id = 1;
}
message GetOneByIdResponse {
  string id = 1;
  string name = 2;
  string status = 3;
}
